--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1> Soham Sarkar's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr>
-    <h3><a href = "D:\web development\4.3 HTML Porfolio Project\public\index (2).html"> Movie Ranking Project</a></h3>
+    <h3><a href = "html-portfolio\public\index (2).html"> Movie Ranking Project</a></h3>
     <img src = "D:\web development\4.3 HTML Porfolio Project\assets\images\goal.png" height = "170"/>
     <h3><a href = "public/index.html">Birthday Invite Project</a></h3>
     <img src = "D:\web development\4.3 HTML Porfolio Project\assets\images\Screenshot 2023-09-23 213101.png" height = 300/>
